--- a/MathGPLib/CMakeLists.txt
+++ b/MathGPLib/CMakeLists.txt
@@ -11,10 +11,10 @@ include_directories("../" "${LIBRARY_BASE}/NVLib" "${LIBRARY_BASE}/GeneticLib")
 
 # Create Library
 add_library (MathGPLib STATIC
+	Grammar/LiteralNode.cpp
 	ArgUtils.cpp
 	Candidate.cpp
 	CandidateFactory.cpp
 	Mutation.cpp
 	ScoreFinder.cpp
 )
-
