--- a/MathGPTests/CMakeLists.txt
+++ b/MathGPTests/CMakeLists.txt
@@ -24,7 +24,9 @@ add_executable (MathGPTests
 	Tests/Example_Tests.cpp
 	Tests/LiteralNode_Tests.cpp
 	Tests/ConstantNode_Tests.cpp
+	Tests/AddNode_Tests.cpp
 )
+
 
 
 # Add link libraries
