Add new code dash logic

--- a/MathGPLib/CMakeLists.txt
+++ b/MathGPLib/CMakeLists.txt
@@ -29,4 +29,7 @@ add_library (MathGPLib STATIC
 	CandidateFactory.cpp
 	Mutation.cpp
 	ScoreFinder.cpp
+	Socket.cpp
+	CodeDash.cpp
+	DashLogger.cpp
 )
